test/spec_vectors/load/fail/module_24.wat
(module (memory 1) (func $load32_s_i64 (i64.load32_s (i32.const 0))))